test/integration/bad/lang/incomplete9.stan
transformed data {
  vector[2] foo;
  row_vector[2] bar = -foo' while
}
